# ares-node

./: .gitignore  Cargo.toml  README.md  README.old.md  account-gen.sh  docker-compose.yml  docker_run.sh  my-staging-raw.json  my-staging.json
node/: Cargo.toml
node/bench/: Cargo.toml
node/browser-testing/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  cli.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/res/: chain-data-ares-babe.json  wasm.babe.v102.hex  wasm.v102.hex
node/rpc-client/: Cargo.toml
node/runtime/: Cargo.toml
node/runtime/src/: lib.rs  part_ares.rs  part_member_extend.rs  part_ocw.rs  part_staking_extend.rs
node/src/: chain_spec.rs  command.rs  lib.rs  main.rs  node_rpc.rs  service.rs
node/src/chain_spec/: ares_genesis.rs  testnet_genesis.rs
node/test-runner-example/: Cargo.toml
node/testing/: Cargo.toml
node/testing/src/: genesis.rs
pallets/foreign2/ocw-suit/: LICENSE  README.md
pallets/foreign2/ocw-suit/pallets/pallet-ocw/: Cargo.toml
pallets/foreign2/ocw-suit/pallets/pallet-ocw/src/: lib.rs
pallets/foreign2/ocw-suit/pallets/staking-extend/src/: lib.rs
pallets/member-extend/: Cargo.toml
pallets/member-extend/src/: lib.rs
pallets/pallet-ares/: Cargo.toml
pallets/pallet-ares/src/: lib.rs
pallets/pallet-ocw/: Cargo.toml  README.md
pallets/pallet-ocw/src/: lib.rs  tests.rs
pallets/staking-extend/: Cargo.toml
pallets/staking-extend/src/: lib.rs
pallets/template/src/: lib.rs  mock.rs
primitives/externalities/: Cargo.toml
primitives/finality-grandpa/: Cargo.toml
primitives/finality-grandpa/src/: lib.rs
runtime/: Cargo.toml
runtime/gladios/: Cargo.toml
runtime/gladios/src/: part_challenge.rs
runtime/gladios/src/network/: part_authority_discovery.rs  part_authorship.rs  part_babe.rs  part_staking.rs
runtime/pioneer/: Cargo.toml
runtime/pioneer/src/: lib.rs  part_member_extend.rs  part_ocw.rs
runtime/pioneer/src/network/: mod.rs  part_authorship.rs  part_session.rs
runtime/src/: lib.rs  part_member_extend.rs  part_ocw.rs  part_staking_extend.rs
runtime/src/network/: part_mmr.will.del  part_session.rs
utils/chain-spec-builder/: Cargo.toml
