[package]
name = "test-runner-example"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[dependencies]
test-runner = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }

frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }

node-runtime = { path = "../runtime" }
node-primitives = { path = "../primitives" }
node-cli = { path = "../cli" }

grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-service = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-network = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-informant = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }

sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-api = {  git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }

log = "0.4.14"
