[package]
name = "pallet-ocw"
version = "3.0.1"
authors = ["Ares Technologies <linhai@cancanyou.com>"]
edition = "2018"
license = "Unlicense"
homepage = "https://github.com/aresprotocols"
repository = "https://github.com/aresprotocols/ares-node"
description = "Ares price submit."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { version = "0.4", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-keystore = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08", optional = true }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
lite-json = { version = "0.1", default-features = false }
log = { version = "0.4.14", default-features = false }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
pallet-session = { version = "4.0.0-dev", features = ["historical"], default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }

[dev-dependencies]
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-08" }


[features]
default = ["std"]
std = [
	"sp-application-crypto/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"hex/std",
]
try-runtime = ["frame-support/try-runtime"]
